<?xml version="1.0" encoding="utf-8"?><!-- fragment_main.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextBillAmount"
        style="@style/TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bill_amount"
        android:importantForAccessibility="yes"
        android:inputType="numberDecimal"

        android:minHeight="48dp" />

    <TextView
        style="@style/TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/tip_percentage_selection"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroupTipPercentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_percentage" />

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_percentage" />

        <RadioButton
            android:id="@+id/radioButton20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_percentage" />

        <RadioButton
            android:id="@+id/radioButtonCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/custom_tip_input" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextCustomTip"
        style="@style/TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/custom_tip_input"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonCalculate"
        style="@style/BUTTON"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="yes"
        android:text="@string/calculate_button" />

    <TextView
        android:id="@+id/textViewTipAmount"
        style="@style/TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:importantForAccessibility="yes"
        android:paddingTop="16dp"
        android:text="@string/tip_calculated"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewTotalAmount"
        style="@style/TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:importantForAccessibility="yes"
        android:paddingTop="8dp"
        android:text="@string/bill_calculated"
        android:textSize="18sp" />

</LinearLayout>
