<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/counter"
        android:padding="50dp"
        android:textColor="#416BD2"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/counterText"
            style="@style/TEXT"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/defaultMsg"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/counterValue"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/one"
            android:textSize="25sp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:hint="@string/enter_value">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Enter Value"
            android:inputType="number"
            android:text="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonIncrease"
            style="@style/BUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/increase"
            android:text="Increase" />

        <Button
            android:id="@+id/buttonDecrease"
            style="@style/BUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/decrease"
            android:text="Decrease" />
    </LinearLayout>


    <Button
        android:id="@+id/buttonReset"
        style="@style/BUTTON"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/reset"
        android:text="Reset" />

</LinearLayout>