<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/timerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/innerLayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:gravity="center_horizontal"
                android:text="@string/application_name"
                android:textColor="@color/design_default_color_primary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:srcCompat="@mipmap/ic_banner_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="116dp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/ButtonApplication1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"

                        android:text="@string/tip_calculator" />

                    <Button
                        android:id="@+id/ButtonApplication2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"

                        android:text="@string/quote_gen" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/ButtonApplication3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"

                        android:text="@string/Counter" />

                    <Button
                        android:id="@+id/ButtonApplication4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"

                        android:text="@string/Unit_convertor" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
